@startuml feature-traffic-spike-uc1
top to bottom direction

skinparam packageStyle folder
skinparam linetype ortho
skinparam ranksep 100
skinparam nodesep 40
skinparam DefaultFontSize 23

hide circle
hide empty members

together {
  package "presentation.consumers" {
    class HttpLogConsumer
  }
}

together {
  package "application" {
    class DetectionJobRunner
    class TrafficUseCase
  }
}

together {
  package "application.ports" {
    interface WindowPort
    interface HistoryPort
    interface LockPort
    interface PublisherPort
    interface ResultRepositoryPort

    WindowPort -[hidden]down- HistoryPort
    HistoryPort -[hidden]down- LockPort
    LockPort -[hidden]down- PublisherPort
    PublisherPort -[hidden]down- ResultRepositoryPort
  }
}

together {
  package "domain.services" {
    class TrafficService
    class LogWindowAggregator
    class EnsembleRuleEngine

    TrafficService -[hidden]down- LogWindowAggregator
    LogWindowAggregator -[hidden]down- EnsembleRuleEngine
  }

  package "domain.models" {
    class Log
    class TrafficInput
    class TrafficResult
    class TrafficThresholds
    class DetectionResult
    class Severity

    Log -[hidden]down- TrafficInput
    TrafficInput -[hidden]down- TrafficResult
    TrafficResult -[hidden]down- TrafficThresholds
    TrafficThresholds -[hidden]down- DetectionResult
    DetectionResult -[hidden]down- Severity
  }
}

together {
  package "infrastructure.adapters" {
    class RedisWindowAdapter
    class RedisHistoryAdapter
    class RedisLockAdapter
    class RabbitMQPublisherAdapter
    class PostgresDetectionResultRepository

    RedisWindowAdapter -[hidden]down- RedisHistoryAdapter
    RedisHistoryAdapter -[hidden]down- RedisLockAdapter
    RedisLockAdapter -[hidden]down- RabbitMQPublisherAdapter
    RabbitMQPublisherAdapter -[hidden]down- PostgresDetectionResultRepository
  }
}

"presentation.consumers" -[hidden]down- "application"
"application" -[hidden]down- "application.ports"
"application.ports" -[hidden]down- "domain.services"
"domain.services" -[hidden]down- "infrastructure.adapters"

"domain.services" -[hidden]right- "domain.models"

HttpLogConsumer o-- WindowPort

DetectionJobRunner o-- WindowPort
DetectionJobRunner o-- HistoryPort
DetectionJobRunner o-- LockPort
DetectionJobRunner *-- TrafficUseCase
DetectionJobRunner o-- LogWindowAggregator

TrafficUseCase o-- TrafficService
TrafficUseCase o-- PublisherPort
TrafficUseCase o-- ResultRepositoryPort
TrafficUseCase o-- TrafficThresholds

TrafficService o-- EnsembleRuleEngine
EnsembleRuleEngine ..> TrafficThresholds

RedisWindowAdapter ..|> WindowPort
RedisHistoryAdapter ..|> HistoryPort
RedisLockAdapter ..|> LockPort
RabbitMQPublisherAdapter ..|> PublisherPort
PostgresDetectionResultRepository ..|> ResultRepositoryPort

@enduml
